slide animation not showing properly issue

--- a/nxdev/notificationx/frontend/scss/_themes/_common.scss
+++ b/nxdev/notificationx/frontend/scss/_themes/_common.scss
@@ -37,7 +37,7 @@
         }
         .yt-notificationx-link {
             position: absolute;
-            left: inherit;
+            left: auto;
             bottom: inherit;
             top: -35px;
             right: 15px;
